apps/mobile/src/styles.scss
/* ... */
.alert-head.sc-ion-alert-ios {
  padding-top: 0;
  padding-bottom: 6px;
}

.alert-title.sc-ion-alert-ios {
  margin-top: 0px;
  font-size: 18px;
  font-weight: 600;
}

.alert-message.sc-ion-alert-ios {
  font-size: 14px;
  color: var(--ion-color-tertiary);
}

.alert-button.sc-ion-alert-ios.danger {
  color: var(--ion-color-white);
  font-weight: 500;
  border: none;
  background: var(--ion-color-danger);
  margin: 0px 16px;
  border-radius: 3px;
}

.alert-button.sc-ion-alert-ios.alert-button-role-cancel {
  color: var(--ion-color-medium);
  font-weight: 500;
  border: none;
  background: transparent;
  margin: 0px 16px;
  border-radius: 3px;
}

.alert-button.sc-ion-alert-ios:last-child {
  margin-top: 6px !important;
}

.alert-button-group.sc-ion-alert-ios {
  max-width: 75%;
  margin: 0 auto;
}

/* Loading */
.default-loading .loading-wrapper p {
  margin: 0;
  font-size: 16px;
  color: var(--ion-color-white);
}

.default-loading .loading-wrapper span {
  font-weight: 400;
  margin-top: 6px;
  display: block;
  color: var(--ion-color-tertiary);
}

.default-loading {
  --background: var(--ion-color-secondary);
  --spinner-color: var(--ion-color-primary);
  --width: 100% !important;
  --max-width: 340px;
  --backdrop-opacity: 0.9;
}

/* Popover */
ion-popover.popover-in-modal {
  --offset-x: -10px;
  --backdrop-opacity: 0.25;
}

ion-popover.popover-in-modal ion-radio-group ion-item {
  --inner-border-width: 0;
  border-bottom: 1px solid var(--ion-color-dark);
  font-size: 14px;
}

ion-popover.popover-in-modal ion-radio-group ion-item:last-child {
  border: none;
}

ion-popover.popover-in-modal ion-list ion-item {
  --inner-border-width: 0;
  --background: var(--ion-color-dark);
}

/* Datetime */
ion-datetime {
  --background-rgb: rgb(32 41 52);
  --background: var(--ion-color-secondary);
  border-bottom: 1px solid var(--ion-color-dark);
}

ion-datetime .calendar-days-of-week {
  color: green;
}

/* Range */
ion-item.item-range {
  --padding-start: 16px;
  --inner-padding-end: 16px;
  padding-top: 3px;
}

ion-item.range-values {
  font-size: 12px;
  color: var(--ion-color-white);
  --padding-start: 0;
  --inner-padding-end: 0;
  --height: 20px;
  --min-height: 20px;
  padding-bottom: 3px;
}

ion-item.range-values > div {
  width: 63px;
  text-align: center;
  margin: -12px 0 0 0;
}

/* Note */
ion-note.ion-note-small {
  font-size: 14px;
  font-weight: 400;
}

/* Modal */
ion-footer.modal-footer {
  padding: 8px 0;
}

/* Chart */
ion-card.ion-card-chart ion-card-header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

ion-card.ion-card-chart ion-card-title {
  font-size: 20px;
  margin-bottom: 3px;
}

ion-card.ion-card-chart ion-card-subtitle {
  font-size: 12px;
  font-weight: 500;
  color: var(--ion-color-tertiary);
  text-transform: none;
}

/* Logo */
.logo-container {
  text-align: center;
  margin-bottom: 40px;
}

h1.logo-placeholder {
  font-weight: 600;
  background: -webkit-linear-gradient(
    var(--ion-color-light),
    var(--ion-color-tertiary)
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
  font-size: 36px;
  margin: 0 0 6px 0;
}

.logo-container p {
  color: var(--ion-color-tertiary);
}

/* Searchbar */
ion-searchbar.sc-ion-searchbar-ios-h {
  --cancel-button-color: var(--ion-color-medium);
  --background: var(--ion-color-dark-tint);
  --border-radius: 8px;
}

/* Skeleton */
ion-skeleton-text {
  --border-radius: 3px;
}

ion-avatar ion-skeleton-text {
  --border-radius: 50%;
}

